--- a/nodebird/public/main.css
+++ b/nodebird/public/main.css
@@ -1,5 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Radio+Canada:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Monoton&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
+
 * { box-sizing: border-box; }
-html, body { background: rgba(0, 128, 0, 0.3); margin: 0; padding: 0; height: 100%; }
+html, body {
+  background: rgba(0, 128, 0, 0.3);
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: "Radio Canada", sans-serif;
+}
 .btn {
   display: inline-block;
   padding: 0 5px;
